--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -53,7 +53,7 @@
 /* ================= MEDIA QUERIES (MEDIUM DEVICES) =================*/
 @media screen and (max-width: 1024px){
     .services__container {
-        grid-template-columns: 1fr 1fr;
+        /* grid-template-columns: 1fr 1fr; */
         gap: 2rem;
     }
 
@@ -63,9 +63,9 @@
 }
 
 /* ================= MEDIA QUERIES (SMALL DEVICES) =================*/
-@media screen and (max-width: 600){
+/* @media screen and (max-width: 600){
     .services__container {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, 1fr);
         gap: 1.5rem;
     }
-}
+} */
