--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -66,7 +66,7 @@ input, textarea {
 }
 
 /* ================= MEDIA QUERIES (SMALL DEVICES) =================*/
-@media screen and (max-width: 600){
+@media screen and (max-width: 600px){
     .container.contact__container {
         width: var(--container-width-sm);
     }
