--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -40,7 +40,7 @@
 }
 
 /* ================= MEDIA QUERIES (SMALL DEVICES) =================*/
-@media screen and (max-width: 600){
+@media screen and (max-width: 600px){
     .container.testimonials__container {
         width: var(--container-width-sm);
     }
